Multiresolution modifier: Using 'Unsubdivide' while the mesh has faces hidden in edit mode results in Blender freezing completely #126633

Closed
opened 2024-08-22 10:18:17 +02:00 by SleepyEngi · 8 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia rtx 2060

Blender Version
Broken: 4.1, 4.2
Worked: ~
Short description of error
If you have a subdivided mesh, and select and hide faces in edit mode, attempting to un-subdivide the mesh with the multiresolution modifier results in blender freezing completely for ever.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
From scratch

  1. Add any object
  2. Subdivide it using either a subdivision surface or multiresolution modifier, and apply it.
  3. Go into edit mode and select some faces, and hide them.
  4. Go into object mode, add a multiresolution modifier, and click the un-subdivide button
  5. Blender will now freeze

From blender file

  1. Click the un-subdivide button on the multiresolution modifier

Extra notes
One time the bug showed up differently for me in 4.2, instead of freezing, it completed the operation, but when I looked at the model, all the hidden faces had merged into one face, making a section of the model vanish. I couldn't get this to happen again on the example file, but it might give some insight.

**System Information** Operating system: Windows 10 Graphics card: Nvidia rtx 2060 **Blender Version** Broken: 4.1, 4.2 Worked: ~ **Short description of error** If you have a subdivided mesh, and select and hide faces in edit mode, attempting to un-subdivide the mesh with the multiresolution modifier results in blender freezing completely for ever. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). **From scratch** 1. Add any object 2. Subdivide it using either a subdivision surface or multiresolution modifier, and apply it. 3. Go into edit mode and select some faces, and hide them. 4. Go into object mode, add a multiresolution modifier, and click the un-subdivide button 5. Blender will now freeze **From blender file** 1. Click the un-subdivide button on the multiresolution modifier **Extra notes** One time the bug showed up differently for me in 4.2, instead of freezing, it completed the operation, but when I looked at the model, all the hidden faces had merged into one face, making a section of the model vanish. I couldn't get this to happen again on the example file, but it might give some insight.
SleepyEngi added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-08-22 10:18:21 +02:00
Member

I can confirm the issue with the provided file.

Profiling this it seems like Blender gets stuck in BM_edge_share_quad_check. I will add the Modeling module to this, sorry if this is the wrong module.

It's not a crash, but the behaviour is just as bad as a crash, so I will set to high severity like the triaging module has been asked to do for crashes.

I can confirm the issue with the provided file. Profiling this it seems like Blender gets stuck in `BM_edge_share_quad_check`. I will add the Modeling module to this, sorry if this is the wrong module. It's not a crash, but the behaviour is just as bad as a crash, so I will set to high severity like the triaging module has been asked to do for crashes.
Member

Just confirming that this behavior extends all the way back to 2.93 when this feature was introduced.

Just confirming that this behavior extends all the way back to 2.93 when this feature was introduced.
Member

Here's a file that demonstrates the behavior mentioned in the original post in the Extra Notes section

I think the key takeaway here is that the operator is taking visibility into consideration somewhere which either causes the infinite (?) loop seen in some meshes or in the fact that hidden faces are merged oddly

Here's a file that demonstrates the behavior mentioned in the original post in the `Extra Notes` section I think the key takeaway here is that the operator is taking visibility into consideration somewhere which either causes the infinite (?) loop seen in some meshes or in the fact that hidden faces are merged oddly
Member

Should have a fix for this up for PR shortly.

Should have a fix for this up for PR shortly.
Sean Kim self-assigned this 2024-08-28 21:52:45 +02:00
Member

Related older issue here: #99887

Related older issue here: https://projects.blender.org/blender/blender/issues/99887
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-29 06:48:38 +02:00
Member

@ideasman42 hi, safe to backport the fix?

@ideasman42 hi, safe to backport the fix?

@PratikPB2123 yes, added along with: 86f2c120f2

@PratikPB2123 yes, added along with: 86f2c120f2c9549217aa68dc6b2f75c2dcfe37f5
Member

@ideasman42 - Do you think this should be considered for 3.6 as well, possibly 3.3 (unsure since our final LTS release for that version is only in a few weeks)?

@ideasman42 - Do you think this should be considered for 3.6 as well, possibly 3.3 (unsure since our final LTS release for that version is only in a few weeks)?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126633
No description provided.